{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "d61b7ba4-b987-4019-b492-97dcf0b69bb3",
            "actions": [
                {
                    "name": "Pan",
                    "type": "Value",
                    "id": "2693cd98-c75b-4641-8509-a50703c7543c",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "4b307b96-ed54-4cfe-b9c6-77d53dd2fef6",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Scroll Zoom",
                    "type": "PassThrough",
                    "id": "4129d6a6-a210-4112-b71b-3ac186b0d818",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Axis Zoom",
                    "type": "Value",
                    "id": "15ad9b15-43e8-420a-9d00-3160cfb82621",
                    "expectedControlType": "Axis",
                    "processors": "Clamp(min=-1,max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "66f8a5b6-7789-4e55-bd36-2ade4d931195",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "db9e0fe1-b0cb-4f5b-a61c-573e45f9a2d7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "1785ef43-4149-4eed-a0a5-325027b519b7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d760c9c7-fc48-49ee-9b48-489d093b7d57",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "06bd8af5-42be-493f-b19b-9d18921852d4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "QE",
                    "id": "8a06d02d-1130-48e8-baf6-0a5671eef622",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7ec507e3-b51c-499d-8a88-8bff18f1f515",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5b5f34e6-2413-4aa0-a9cf-db8a1c98978e",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftRightArrow",
                    "id": "668f16fe-7af5-44e7-9f3b-c3b2c510e6f0",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "fe415f4d-7cd4-4df7-92f9-1ad0d7ce1f7d",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ede0edc9-4be4-4311-be9f-92dc92939c93",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "577b792c-cbbd-44ff-b446-4165da0deb87",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "",
                    "action": "Scroll Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "UpDownArrow",
                    "id": "ad8cc1dc-5f9d-407b-9dd8-f24fbe6a8718",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axis Zoom",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b8d335d1-6d2d-46b0-b7f2-44acd881c697",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axis Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "826df733-de98-4e20-ada1-41a6af469f75",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Axis Zoom",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Interactions",
            "id": "c1d2ef7f-089c-4340-8d2b-cba8664b0d0e",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "5641b44d-e646-43c8-98a2-25a36928895d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "ced3aabe-6f10-4270-9489-166eaf7c27b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "aba776c5-f80e-441e-a39c-59d176dea52e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "189c4062-6a62-4922-b40f-c4e02f8ade4a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97569844-9b0d-4a36-86d5-75d2cad14fbd",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d381dbf-9712-4144-8c8d-f8b044af538f",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}